tests/NormalTests/paczka1/fuzzy1/70940517.err
Error in line 5: v9DAiJ S378 51,1
Error in line 20: jpne7NoHdG S851 45,9
Error in line 22: v9DAiJ A30 60,6
Error in line 21: jpne7NoHdG A30 35,7
